--- a/package.json
+++ b/package.json
@@ -1,47 +1,77 @@
 {
   "name": "klondike-solitaire-advanced",
   "version": "2.0.0",
-  "description": "Advanced Klondike Solitaire with AI/ML capabilities",
-  "main": "dist/index.html",
+  "description": "Advanced Klondike Solitaire with React, TypeScript, and Real TensorFlow.js ML",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "lint": "eslint src --ext .js,.ts,.jsx,.tsx",
-    "lint:fix": "eslint src --ext .js,.ts,.jsx,.tsx --fix",
+    "test:coverage": "vitest --coverage",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
     "type-check": "tsc --noEmit",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist",
+    "analyze": "npx vite-bundle-analyzer dist"
   },
-  "keywords": ["solitaire", "game", "ai", "machine-learning", "cards"],
+  "keywords": [
+    "solitaire",
+    "game",
+    "react",
+    "typescript",
+    "tensorflow",
+    "machine-learning",
+    "pwa",
+    "cards"
+  ],
   "author": "Your Name",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ],
+  "dependencies": {
+    "@tensorflow/tfjs": "^4.15.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.15.0",
+    "framer-motion": "^10.16.0",
+    "immer": "^10.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-spring": "^9.7.0",
+    "react-use-gesture": "^9.1.3",
+    "zustand": "^4.4.0"
+  },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "@vitest/ui": "^0.34.0",
     "autoprefixer": "^10.4.0",
-    "eslint": "^8.0.0",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.0",
     "gh-pages": "^6.0.0",
+    "jsdom": "^22.0.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.0",
-    "vite": "^5.0.0",
-    "vite-plugin-pwa": "^0.17.0",
-    "vitest": "^1.0.0",
-    "@vitest/ui": "^1.0.0"
-  },
-  "dependencies": {
-    "@tensorflow/tfjs": "^4.15.0",
-    "canvas-confetti": "^1.9.0",
-    "framer-motion": "^10.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "zustand": "^4.4.0",
-    "lottie-web": "^5.12.0",
-    "howler": "^2.2.0"
+    "vite": "^4.4.0",
+    "vite-bundle-analyzer": "^0.7.0",
+    "vite-plugin-pwa": "^0.16.0",
+    "vitest": "^0.34.0"
   }
-} 
+}
