--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
-  "name": "klondike-solitaire-advanced",
-  "version": "2.0.0",
-  "description": "Advanced Klondike Solitaire with React, TypeScript, and Real TensorFlow.js ML",
+  "name": "solitaire-v5",
+  "private": true,
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --ext ts,tsx --fix",
-    "type-check": "tsc --noEmit",
-    "deploy": "npm run build && gh-pages -d dist",
-    "analyze": "npx vite-bundle-analyzer dist"
+    "preview": "vite preview"
   },
   "keywords": [
     "solitaire",
@@ -38,40 +31,32 @@
     "not dead"
   ],
   "dependencies": {
-    "@tensorflow/tfjs": "^4.15.0",
-    "@tensorflow/tfjs-backend-webgl": "^4.15.0",
-    "framer-motion": "^10.16.0",
-    "immer": "^10.1.1",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tensorflow/tfjs": "^4.17.0",
+    "@tensorflow/tfjs-core": "^4.17.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-spring": "^9.7.0",
-    "react-use-gesture": "^9.1.3",
-    "zustand": "^4.4.0"
+    "tailwind-merge": "^2.6.0",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "@vitest/ui": "^0.34.0",
-    "autoprefixer": "^10.4.0",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.0",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^4.5.2",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.0",
-    "gh-pages": "^6.0.0",
-    "jsdom": "^22.0.0",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.0",
-    "vite": "^4.4.0",
-    "vite-bundle-analyzer": "^0.7.0",
-    "vite-plugin-pwa": "^0.16.0",
-    "vitest": "^0.34.0"
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.3",
+    "vite-plugin-pwa": "^0.17.5"
   }
 }
