--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     "@tensorflow/tfjs-core": "^4.17.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "framer-motion": "^12.16.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.6.0",
-    "zustand": "^4.5.1"
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
